<resources>
    <string name="app_name">Quiz for Kids</string>
    <string name="username">Username:</string>
    <string name="enter_your_username">Enter your username...</string>
    <string name="password">Password:</string>
    <string name="enter_your_password">Enter your password...</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="register_title">Register</string>
    <string name="create_an_account">Create an account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your email...</string>
    <string name="back">Back</string>
    <string name="animals">Animals</string>
    <string name="cartoons">Cartoons</string>
    <string name="log_off">Log off</string>
    <string name="score">Score</string>
    <string name="todo">TODO</string>
    <string name="quiz_for_kids">Quiz for kids</string>
    <string name="home">Home</string>
    <string name="animal">Animal</string>
    <string name="your_score">Your score:</string>
    <string name="elephant">elephant</string>
    <string name="dog">dog</string>
    <string name="fish">Fish</string>
    <string name="what_animal_is_this">What animal is this?</string>
    <string name="next">Next</string>
    <string name="try_again">Try Again</string>
    <string name="logo">logo</string>
    <string name="check">Check</string>
    <string name="sort_by_cartoon_area">Sort by Cartoon area</string>
    <string name="sort_by_animal_area">Sort by Animal area</string>

</resources>