<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="@color/lavender"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container" />

        <TextView
            android:id="@+id/reg_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/register_tv"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/lavender"/>

        <EditText
            android:id="@+id/reg_email_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            app:layout_constraintTop_toTopOf="@id/reg_email_tv"
            app:layout_constraintBottom_toBottomOf="@id/reg_email_tv"
            app:layout_constraintStart_toEndOf="@id/reg_email_tv"
            android:layout_marginLeft="30dp" />

        <TextView
            android:id="@+id/reg_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/reg_email_tv"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/lavender"/>

        <EditText
            android:id="@+id/reg_username_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_username"
            app:layout_constraintTop_toTopOf="@id/reg_username_tv"
            app:layout_constraintBottom_toBottomOf="@id/reg_username_tv"
            app:layout_constraintStart_toEndOf="@id/reg_username_tv"
            android:layout_marginLeft="30dp" />

        <TextView
            android:id="@+id/reg_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/reg_username_tv"
            app:layout_constraintStart_toStartOf="@id/reg_username_tv"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@color/lavender"/>

        <EditText
            android:id="@+id/reg_password_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            app:layout_constraintBottom_toBottomOf="@id/reg_password_tv"
            app:layout_constraintStart_toEndOf="@id/reg_password_tv"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id="@+id/reg_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintTop_toTopOf="@id/reg_password_tv"
            app:layout_constraintTop_toBottomOf="@id/reg_password_tv"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintEnd_toStartOf="@id/reg_back_btn"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/reg_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/reg_register_btn"
            app:layout_constraintTop_toTopOf="@id/reg_register_btn"
            app:layout_constraintBottom_toBottomOf="@id/reg_register_btn"
            app:layout_constraintEnd_toEndOf="@id/container"
            android:text="@string/back"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>