<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textStyle="bold"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/container"
            app:layout_constraintTop_toTopOf="@id/container"
            android:textColor="@color/lavender"/>

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintTop_toBottomOf="@id/login_tv"
            android:text="@string/username"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/lavender"/>

        <EditText
            android:id="@+id/username_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_username"
            app:layout_constraintTop_toTopOf="@id/username_tv"
            app:layout_constraintBottom_toBottomOf="@id/username_tv"
            app:layout_constraintStart_toEndOf="@id/username_tv"
            android:layout_marginLeft="30dp" />

        <TextView
            android:id="@+id/password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/username_tv"
            app:layout_constraintStart_toStartOf="@id/username_tv"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@color/lavender"/>

        <EditText
            android:id="@+id/password_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            app:layout_constraintBottom_toBottomOf="@id/password_tv"
            app:layout_constraintTop_toTopOf="@id/password_tv"
            app:layout_constraintStart_toEndOf="@id/password_tv"
            android:layout_marginLeft="30dp"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            app:layout_constraintTop_toBottomOf="@id/password_tv"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintEnd_toEndOf="@id/container"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/dont_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/container"
            app:layout_constraintEnd_toStartOf="@id/create_btn"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            android:text="@string/don_t_have_an_account"
            android:textSize="15sp"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            app:layout_constraintTop_toTopOf="@id/dont_tv"
            app:layout_constraintStart_toEndOf="@id/dont_tv"
            app:layout_constraintBottom_toBottomOf="@id/dont_tv"
            android:layout_marginLeft="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>