<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outside_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="@id/outside_container"
            app:layout_constraintStart_toStartOf="@id/outside_container"
            app:layout_constraintEnd_toEndOf="@id/outside_container">

            <ImageView
                android:id="@+id/main_page_logo_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/logo"
                app:layout_constraintTop_toTopOf="@id/container"
                android:src="@drawable/quiz_logo"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintEnd_toEndOf="@id/container"/>

            <TextView
                android:id="@+id/main_score_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintEnd_toEndOf="@id/container"
                app:layout_constraintBottom_toTopOf="@id/main_animals_btn"
                android:text="@string/score"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/main_page_logo_img"
                android:layout_marginTop="50dp"/>

            <Button
                android:id="@+id/main_animals_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/main_score_tv"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintEnd_toStartOf="@id/main_Cartoons_btn"
                app:layout_constraintBottom_toTopOf="@id/main_log_off_btn"
                android:text="@string/animals"
                android:textSize="25sp"
                android:layout_marginTop="50dp"/>

            <Button
                android:id="@+id/main_Cartoons_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/main_animals_btn"
                app:layout_constraintTop_toTopOf="@id/main_animals_btn"
                app:layout_constraintBottom_toBottomOf="@id/main_animals_btn"
                android:layout_marginStart="30dp"
                android:text="@string/cartoons"
                app:layout_constraintEnd_toEndOf="@id/container"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/main_log_off_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/main_animals_btn"
                app:layout_constraintStart_toStartOf="@id/container"
                app:layout_constraintEnd_toEndOf="@id/container"
                android:layout_marginTop="50dp"
                android:text="@string/log_off"/>


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
